--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'forge'
 
-version = " 1.1.5 - MC 1.7.10"
+version = " 1.1.6-LE - MC 1.7.10"
 group = "electroblob.wizardry"// http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Electroblob's Wizardry "
 
